# playground

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.github/: actionlint.yaml  labeler.yaml
.github/workflows/: apps-presigner-ci.yaml  labeler.yaml
adrs/: YYYY-MM-DD-template-adr.md
apps/presigner/: Dockerfile  README.md  pyproject.toml
apps/presigner/scripts/: entrypoint.sh
argo/charts/amazon-eks-pod-identity-webhook/: README.md  values.yaml
argo/charts/argo/: Chart.yaml  values.dev.yaml  values.yaml
argo/charts/aws-ebs-csi-driver/: Chart.yaml  values.yaml
argo/charts/cert-manager/: Chart.yaml  values.dev.yaml  values.yaml
argo/charts/crowdsec/: Chart.yaml  values.yaml
argo/charts/external-secrets-operator/: values.dev.yaml  values.yaml
argo/charts/gha/: Chart.yaml  values.dev.yaml  values.yaml
argo/charts/karpenter/: Chart.yaml  values.dev.yaml  values.yaml
argo/charts/nginx/: Chart.yaml  values.yaml
argo/charts/nvidia-gpu-operator/: Chart.yaml
argo/charts/reloader/: README.md  values.dev.yaml  values.yaml
argo/charts/traefik/: Chart.yaml  values.yaml
infra/: FAQ.md  README.md  root.hcl  terragrunt.common.hcl
infra/apps/: ecr.tf  presigner.tf  terragrunt.hcl
infra/aws/: argo.tf  billing.tf  cert_manager.tf  crowdsec.tf  ebs_csi_driver.tf  external_secrets_operator.tf  github.tf  grafana.tf  k3s.tf  karpenter.tf  networking.tf  oauth2_proxy.tf  route53.tf  secrets.enc.yaml  sg.tf  signer.tf  tailscale.tf  terragrunt.hcl
infra/bootstrap/: gitlab.tf  kms.tf  outputs.tf  service_linked_roles.tf  ssm.tf  terragrunt.hcl
(+127 files in other folders)
